[package]
name = "lqosd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
lqos_config = { path = "../lqos_config" }
lqos_sys = { path = "../lqos_sys" }
tokio = { version = "1.22", features = [ "full", "parking_lot" ] }
lazy_static = "1.4"
parking_lot = "0.12"
lqos_bus = { path = "../lqos_bus" }
signal-hook = "0.3"
serde_json = "1"
